--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fastify-typescript-starter",
+  "name": "restify",
   "version": "4.1.0",
-  "description": "Fastify TypeScript starter repository",
+  "description": "Basic crud app to tinker with resitfy + ts",
   "scripts": {
     "watch": "tsc --watch --preserveWatchOutput --pretty",
     "dev": "cross-env NODE_ENV=development nodemon",
@@ -9,8 +9,7 @@
     "build": "rimraf dist && tsc",
     "start": "node dist/index.js"
   },
-  "author": "Matschik <mathieu.schimmerling@protonmail.com>",
-  "license": "MIT",
+  "author": "ThiccPan <ihilmiderian@gmail.com>",
   "dependencies": {
     "fastify": "^5.0.0"
   },
